# tagforge3d

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-cadquery-as-cad-backend.md
fonts/LICENSES/: README.md
scripts/: generate_font_test.py
tagforge3d/: __main__.py
